# db-proxy

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  docker-compose-pg.yml  docker-compose.yml  init-pg.sql  interview-guide.md  proxy.conf  test_with_mysql.sh  test_with_pg.sh
benchmarks/: bench_connection_pool.cpp
conf/: proxy.mysql.conf  proxy.postgresql.conf
docs/: LEARNING.md
examples/: diagnostics_demo.cpp  examples.cpp  examples_pg.cpp
include/cli/: connection_config.h  shell.h
include/core/: config.h  logger.h
include/crypto/: sha1.h  sha256.h
include/diagnostics/: diagnostic_engine.h  llm_provider.h  mock_provider.h  ollama_provider.h  prompt_builder.h  report_generator.h
include/monitor/: metrics.h  metrics_http_server.h  performance_analyzer.h  statistics.h
include/network/: epoll_server.h  event_loop.h  tcp_connection.h
include/pool/: backend_connection.h  connection.h  connection_pool.h  pool_manager.h  postgresql_connection.h
include/protocol/: mysql_packet.h  mysql_parser.h  mysql_relay.h  mysql_session_relay.h  postgresql_session_relay.h  transparent_session_relay.h
scripts/: kill_db_proxy.sh
src/: main.cpp
src/cli/: connection_config.cpp  main.cpp  shell.cpp
src/core/: config.cpp  logger.cpp
src/crypto/: sha1.cpp  sha256.cpp
src/diagnostics/: diagnostic_engine.cpp  mock_provider.cpp  ollama_provider.cpp  prompt_builder.cpp  report_generator.cpp
src/monitor/: metrics.cpp  metrics_http_server.cpp  performance_analyzer.cpp  statistics.cpp
src/network/: epoll_server.cpp  event_loop.cpp  tcp_connection.cpp
src/pool/: connection.cpp  connection_pool.cpp  pool_manager.cpp  postgresql_connection.cpp
src/protocol/: mysql_packet.cpp  mysql_parser.cpp  mysql_relay.cpp  mysql_session_relay.cpp  protocol_handler.cpp  transparent_session_relay.cpp
tests/: stress_test.cpp  test_connection_pool.cpp  test_monitor_integration.cpp  test_pooled_session_relay.cpp
